Corrigido link de download do currículo

--- a/index.html
+++ b/index.html
@@ -112,7 +112,10 @@
   <section id="curriculo" class="section dark-section fade-in">
     <div class="container">
       <h2>Currículo</h2>
-      <a href="#" class="btn" target="_blank"><i class="fas fa-download"></i> Baixar Currículo</a>
+      <a href="https://drive.google.com/uc?export=download&id=18pJtyFEd98Avdkl9q6uKx6xRInDtKZPu" class="btn" target="_blank">
+        <i class="fas fa-download"></i> Baixar Currículo
+      </a>
+      
     </div>
   </section>
 
