--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div id="particles-js"></div> <!-- AQUI É O FUNDO COM PARTÍCULAS -->
     <div class="hero-overlay"></div>
     <div class="hero-content">
-      <img src="perfil.jpg" alt="Foto de Guilherme" class="profile-pic" />
+      <img src="Perfil.jpg" alt="Foto de Guilherme" class="profile-pic" />
       <h2>Olá! Eu sou o Guilherme 👋</h2>
       <p>Desenvolvedor Front-End apaixonado por criar experiências incríveis na web.</p>
       <a href="#contato" class="btn">Vamos conversar</a>
