corrigindo caminho da imagem e responsividade

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Guilherme Machado | Portfólio</title>
@@ -23,7 +24,7 @@
     }
   </style>
 </head>
-<body>
+<body> 
   <header class="header">
     <div class="container">
       <h1 class="logo">&lt;/&gt; Guilherme Machado</h1>
@@ -45,7 +46,7 @@
     <div id="particles-js"></div> <!-- AQUI É O FUNDO COM PARTÍCULAS -->
     <div class="hero-overlay"></div>
     <div class="hero-content">
-      <img src="Perfil.jpg" alt="Foto de Guilherme" class="profile-pic" />
+      <img src="img/guiga-perfil.jpg" alt="Foto de Guilherme" class="profile-pic" />
       <h2>Olá! Eu sou o Guilherme 👋</h2>
       <p>Desenvolvedor Front-End apaixonado por criar experiências incríveis na web.</p>
       <a href="#contato" class="btn">Vamos conversar</a>
