--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   <section id="curriculo" class="section dark-section fade-in">
     <div class="container">
       <h2>Currículo</h2>
-      <a href="https://drive.google.com/uc?export=download&id=18pJtyFEd98Avdkl9q6uKx6xRInDtKZPu" class="btn" target="_blank">
+      <a href="https://drive.google.com/file/d/1AjvcVZ-K9weNZk5MbBXAkK3Iu1DtM8kl/view?usp=sharing" class="btn" target="_blank">
         <i class="fas fa-download"></i> Baixar Currículo
       </a>
       
